--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "minimist": "^1.2.0",
     "node-sass": "^4.13.1"
   }
