--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^3.0.0",
     "gulp-image": "^6.0.0",
     "gulp-load-plugins": "^2.0.2",
