--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-ejs": "^5.0.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
     "gulp-image": "^6.0.0",
     "gulp-load-plugins": "^2.0.2",
