--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
     "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
@@ -32,5 +30,10 @@
     "gulp-uglify": "^3.0.2",
     "minimist": "^1.2.0",
     "node-sass": "^4.13.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/register": "^7.8.6"
   }
 }
